--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -22,7 +22,7 @@
     <strong>Ember Components</strong><br>
     <span class="subline">Building blocks for <strong>ambitious</strong> web applications.</span>
     </p>
-    {{! hexaflip-cubes chars='EMBER' waitForFirstFlipInterval=1000 flipInterval=5000 waitForLoop=2000}}
+    {{hexaflip-cubes chars='EMBER' waitForFirstFlipInterval=1000 flipInterval=5000 waitForLoop=2000}}
 
     {{outlet}}
 
