--- a/app/templates/components/hexaflip-cubes.hbs
+++ b/app/templates/components/hexaflip-cubes.hbs
@@ -1,5 +1,5 @@
 <div class="cubes-logo"></div>
-<br>
-<button {{action 'reInitialize'}} class="btn btn-success">Reinitialize</button>
-<br>
+
+<!-- button {{action 'reInitialize'}} class="btn btn-success">Reinitialize</button -->
+
 {{! ladda-button}}
