--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -42,14 +42,14 @@
 **************************************************************/
 body {
   font-family: 'Lato', sans-serif;
-  /*padding-top: 40px;*/
   font-size: 15px;
   font-weight: 300;
-  color: rgb(124, 124, 124);
+  color: #444444;
+  background-color: #ecf0f1;
 }
 
 a {
-  color: rgb(50, 50, 50);
+  font-weight: bold;
   -webkit-transition: all 300ms ease;
   -moz-transition: all 300ms ease;
   -ms-transition: all 300ms ease;
@@ -58,8 +58,10 @@ a {
 }
 
 .lead {
-  font-size: 1.8em;
+  font-size: 3em;
   color: #428BCA;
+  text-align: center;
+  margin-top: 50px;
 }
 
 .logo {
@@ -67,8 +69,9 @@ a {
 }
 
 .logo-title {
-  font-size: 0.8em;
-  color: #428BCA;
+  font-size: 0.9em;
+  color: #000000;
+  line-height: 3em;
 }
 
 .page-header h1 {
@@ -89,6 +92,32 @@ blockquote {
   text-align: center;
   height: 100px;
   background-color: #f5f5f5;
+}
+
+.nav.navbar-nav.navbar-right {
+  padding-top: 12px;
+}
+
+.container {
+  /*background-color: #FFFFFF;*/
+}
+
+.navbar.navbar-default.navbar-fixed-top > .container {
+  height: 50px;
+}
+
+.navbar-default {
+  background-color: #FFFFFF;
+}
+
+
+/*************************************************************
+                    prismjs styles
+**************************************************************/
+:not(pre) >
+code[class*="language-"],
+pre[class*="language-"] {
+  background-color: #FFFFFF;
 }
 
 
