--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -1,1 +1,9 @@
+<div class="container">
+  <p class="lead">
+    <strong>Ember Components</strong><br>
+    <span class="subline">Building blocks for <strong>ambitious</strong> web applications.</span>
+  </p>
+  {{hexaflip-cubes chars='EMBER' waitForFirstFlipInterval=1000 flipInterval=5000 waitForLoop=2000}}
+</div>
+
 {{model}}
