Major refactoring and some restyling done to the landing page.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,6 @@
 <div class="container">
   <p class="lead">
     <strong>About</strong><br>
+    <div class="alert alert-warning"><strong>Disclaimer: </strong>This site is at the moment under heavy development.</div>
   </p>
 </div>
