--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
-{{partial navigation}}
+<div id="wrap">
+  {{partial navigation}}
 
-<div class="container">
-  {{outlet}}
+  <div class="container">
+    {{outlet}}
+  </div>
+
+  {{partial footer}}
 </div>
-
-{{partial footer}}
