--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -1,9 +1,31 @@
-<div class="container">
+<div class="container intro">
   <p class="lead">
     <strong>Ember Components</strong><br>
     <span class="subline">Building blocks for <strong>ambitious</strong> web applications.</span>
   </p>
   {{hexaflip-cubes chars='EMBER' waitForFirstFlipInterval=1000 flipInterval=5000 waitForLoop=2000}}
-</div>
 
-{{model}}
+  <div class="row"><br><br></div>
+
+  <div class="row">
+    <div class="col-xs-4">
+      <img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;">
+      <h2>Components</h2>
+      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+      <p><a class="btn btn-default" href="#">View details »</a></p>
+    </div><!-- /.col-xs-4 -->
+    <div class="col-xs-4">
+      <img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;">
+      <h2>Articles</h2>
+      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+      <p><a class="btn btn-default" href="#">View details »</a></p>
+    </div><!-- /.col-xs-4 -->
+    <div class="col-xs-4">
+      <img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;">
+      <h2>Contribute</h2>
+      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+      <p><a class="btn btn-default" href="#">View details »</a></p>
+    </div><!-- /.col-xs-4 -->
+  </div>
+
+</div>
