--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -89,6 +89,12 @@ p {
   color: #428BCA;
 }
 
+.intro .col-xs-4 {
+  text-align: center;
+  background: none;
+  border: none;
+}
+
 blockquote {
   margin: 20px 0;
   padding: 15px 30px 15px 15px;
@@ -101,11 +107,8 @@ blockquote p {
   font-size: 1em;
 }
 
-#footer {
-  padding-top: 25px;
-  text-align: center;
-  height: 100px;
-  background-color: #f5f5f5;
+hr {
+  border-top: 1px solid #CCCCCC;
 }
 
 .nav.navbar-nav.navbar-right {
@@ -135,13 +138,50 @@ blockquote p {
   padding-bottom: 21px;
 }
 
+
 /*************************************************************
-                    prismjs styles
+                    Sticky footer styles
 **************************************************************/
-:not(pre) >
-code[class*="language-"],
-pre[class*="language-"] {
-  background-color: #FFFFFF;
+html,
+body {
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
+}
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
+}
+
+/* Set the fixed height of the footer here */
+#footer {
+  height: 60px;
+  background-color: #f5f5f5;
+  padding-top: 25px;
+  text-align: center;
+}
+
+/*#footer {
+  height: 100px;
+  background-color: #f5f5f5;
+}*/
+
+
+/*************************************************************
+                    highlight styles
+**************************************************************/
+pre {
+  background: #FFFFFF;
+}
+
+pre code {
+  background: #FFFFFF;
 }
 
 
