Removed obsolete ember-data models, created components embersmith content, created links from landing page to the different sections, landing page restyling but still WIP

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -162,7 +162,7 @@ body {
 /* Set the fixed height of the footer here */
 #footer {
   height: 60px;
-  background-color: #f5f5f5;
+  background-color: #FFFFFF;
   padding-top: 25px;
   text-align: center;
 }
