--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -12,19 +12,19 @@
       <img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;">
       <h2>Components</h2>
       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-      <p><a class="btn btn-default" href="#">View details »</a></p>
+      <p>{{#link-to 'elements' classNames="btn btn-default"}}Components{{/link-to}}</p>
     </div><!-- /.col-xs-4 -->
     <div class="col-xs-4">
       <img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;">
       <h2>Articles</h2>
       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-      <p><a class="btn btn-default" href="#">View details »</a></p>
+      <p>{{#link-to 'articles' classNames="btn btn-default"}}Articles{{/link-to}}</p>
     </div><!-- /.col-xs-4 -->
     <div class="col-xs-4">
       <img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;">
       <h2>Contribute</h2>
       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-      <p><a class="btn btn-default" href="#">View details »</a></p>
+      <p>{{#link-to 'contribute' classNames="btn btn-default"}}Contribute{{/link-to}}</p>
     </div><!-- /.col-xs-4 -->
   </div>
 
