--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -111,10 +111,6 @@ hr {
   border-top: 1px solid #CCCCCC;
 }
 
-.nav.navbar-nav.navbar-right {
-  /*padding-top: 12px;*/
-}
-
 .navbar.navbar-default.navbar-fixed-top > .container {
   height: 50px;
 }
@@ -138,39 +134,22 @@ hr {
   padding-bottom: 21px;
 }
 
-
-/*************************************************************
-                    Sticky footer styles
-**************************************************************/
-html,
-body {
-  height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
+.container .intro .icon-github, .icon-file-text, .icon-th-large {
+  font-size: 8em;
+  color: #428BCA;
 }
 
-/* Wrapper for page content to push down footer */
-#wrap {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  /* Negative indent footer by its height */
-  margin: 0 auto -60px;
-  /* Pad bottom by footer height */
-  padding: 0 0 60px;
+.container .intro h2 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
 }
 
-/* Set the fixed height of the footer here */
 #footer {
   height: 60px;
   background-color: #FFFFFF;
   padding-top: 25px;
   text-align: center;
 }
-
-/*#footer {
-  height: 100px;
-  background-color: #f5f5f5;
-}*/
 
 
 /*************************************************************
