--- a/app/templates/contribute.hbs
+++ b/app/templates/contribute.hbs
@@ -1,5 +1,6 @@
 <div class="container">
   <p class="lead">
     <strong>Contribute</strong><br>
+    <p>The ember components website source is hosted on Github. To contribute a component, create a fork of the project on GitHub and submit a pull request. Please be sure to add some documentation on how to implement nor use the component. Also take a look at the guidelines for more information on how your component contribution should be structured so that it will be easy for us to include it to the website.</p>
   </p>
 </div>
