--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -10,25 +10,22 @@
   <div class="row">
     <div class="col-xs-4">
       <i class="icon-th-large"></i>
-      <!-- img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;" -->
       <h2>Components</h2>
-      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+      <p>The aim of this site is to have a common place where to find, share and read all about ember components.</p>
       <p>{{#link-to 'elements' classNames="btn btn-default"}}Components{{/link-to}}</p>
-    </div><!-- /.col-xs-4 -->
+    </div>
     <div class="col-xs-4">
       <i class="icon-file-text"></i>
-      <!-- img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;" -->
       <h2>Articles</h2>
-      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+      <p>Every now and then, we try to write useful articles about how to build and use ember components in your ember applications.</p>
       <p>{{#link-to 'articles' classNames="btn btn-default"}}Articles{{/link-to}}</p>
-    </div><!-- /.col-xs-4 -->
+    </div>
     <div class="col-xs-4">
       <i class="icon-github"></i>
-      <!-- img class="img-circle" src="http://placehold.it/140/ffffff" alt="140x140" style="width: 140px; height: 140px;" -->
       <h2>Contribute</h2>
-      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+      <p>This website source code is hosted on Github. To contribute a component, create a fork of the project on GitHub and submit a pull request.</p>
       <p>{{#link-to 'contribute' classNames="btn btn-default"}}Contribute{{/link-to}}</p>
-    </div><!-- /.col-xs-4 -->
+    </div>
   </div>
 
 </div>
