--- a/app/templates/articles.hbs
+++ b/app/templates/articles.hbs
@@ -8,16 +8,10 @@
   <div class="row">
     <div class="pull-left">
       <h2>{{article.title}}</h2>
-      <!-- span>{{moment article.rfc822date}}</span -->
     </div>
-    <!-- div class="pull-right">
-      {{#each tag in article.tags}}
-          <span class="label label-primary">{{tag}}</span>
-      {{/each}}
-    </div -->
   </div>
   <div class="row">
-    {{safestring article.html}}
+    {{article.safehtml}}
   </div>
   <hr>
 {{/each}}
