Testing reenabling typeahead

--- a/app/templates/navigation.hbs
+++ b/app/templates/navigation.hbs
@@ -6,6 +6,7 @@
           <img src="assets/components_logo.png" class="logo pull-left">
           <span class="logo-title">Ember Components</span>
         {{/link-to}}
+        {{typeahead-inputfield}}
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li>{{#link-to 'elements'}}Components{{/link-to}}</li>
